[gd_scene load_steps=2 format=3 uid="uid://dyve1d6e082c"]

[ext_resource type="Script" path="res://script/end.gd" id="1_fhx6k"]

[node name="Ending" type="Control"]
custom_minimum_size = Vector2(1024, 768)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fhx6k")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219608, 0.219608, 0.219608, 1)

[node name="lbl_winner" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -268.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "123"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_next" type="Button" parent="."]
custom_minimum_size = Vector2(200, 60)
layout_mode = 0
offset_left = 412.0
offset_top = 400.0
offset_right = 612.0
offset_bottom = 460.0
text = "Next"

[connection signal="pressed" from="btn_next" to="." method="_on_btn_next_pressed"]
